created game logic

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -3,6 +3,8 @@
 	
   <head>
     <title>Memory Game</title>
+    
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   
     <nav class="clearfix">
@@ -18,16 +20,20 @@
     	</p>
     	
     	<div class="board">
-		<div class="card"></div>
-		<div class="card"></div>
-		<div class="card"></div>
-		<div class="card"></div>
+        <div class="queen">
+		      <div class="card"></div>
+		      <div class="card"></div>
+        </div>
+        <div class="king">
+		      <div class="card"></div>
+		      <div class="card"></div>
+        </div>
   	</div>
   
   	<footer>
   		Created with &hearts; by <span class="name">GA</span>
 	</footer>
-
+    <script src="some-javascript-file.js"></script>
      </body>
 
 
