--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-	
-  <head>
+
+	  <head>
     <title>Memory Game</title>
     
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -18,6 +17,10 @@
     	<p>
     		Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are         flipped face up over each turn. The object of the game is to turn over pairs of matching cards.
     	</p>
+
+       <div id="game-board" class="board">
+  </div>
+  
     	
     	<div class="board">
         <div class="queen">
@@ -31,9 +34,9 @@
   	</div>
   
   	<footer>
-  		Created with &hearts; by <span class="name">GA</span>
+  		Created with &hearts; by <span class="name">Sammi</span>
 	</footer>
-    <script src="some-javascript-file.js"></script>
+    <script src="main.js"></script>
      </body>
 
 
